--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "eslint-plugin-standard": "^2.0.1",
     "wepy-compiler-babel": "^1.5.1",
     "wepy-compiler-less": "^1.3.10",
+    "wepy-compiler-stylus": "^1.3.12",
+    "wepy-compiler-typescript": "^1.5.9",
     "wepy-eslint": "^1.5.3",
     "weui-wxss": "^1.1.1"
   }
