--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
   "author": "'inori_lover' <'337938188@qq.com'>",
   "license": "MIT",
   "dependencies": {
+    "lodash": "^4.17.10",
     "wepy": "^1.7.1",
-    "wepy-async-function": "^1.4.4",
+    "wepy-async-function": "^1.4.6",
     "wepy-com-toast": "^1.0.2"
   },
   "devDependencies": {
