--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "lodash": "^4.17.10",
     "wepy": "^1.7.1",
     "wepy-async-function": "^1.4.6",
-    "wepy-com-toast": "^1.0.2"
+    "wepy-com-toast": "^1.0.2",
+    "wepy-web": "^1.6.0"
   },
   "devDependencies": {
     "babel-eslint": "^8",
