--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.1",
   "description": "A WePY project",
   "main": "dist/app.js",
+  "repository": {
+    "url": "https://gitee.com/Inori-Lover/new_shop"
+  },
   "scripts": {
     "dev": "wepy build --watch",
     "build": "cross-env NODE_ENV=production wepy build --no-cache",
@@ -18,30 +21,32 @@
   "license": "MIT",
   "dependencies": {
     "lodash": "^4.17.10",
-    "wepy": "^1.7.1",
+    "wepy": "^1.7.2",
     "wepy-async-function": "^1.4.6",
     "wepy-com-toast": "^1.0.2",
     "wepy-web": "^1.6.0"
   },
   "devDependencies": {
-    "babel-eslint": "^8",
+    "babel-eslint": "^8.2.5",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-export-extensions": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "cross-env": "^5.1.3",
-    "eslint": "^4",
-    "eslint-config-standard": "^7.1.0",
+    "babel-preset-env": "^1.7.0",
+    "cross-env": "^5.2.0",
+    "eslint": "^3.19.0",
+    "eslint-config-standard": "^10.2.1",
     "eslint-friendly-formatter": "^2.0.7",
-    "eslint-plugin-html": "^4",
+    "eslint-plugin-html": "^3.2.2",
+    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-node": "^6.0.1",
     "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-standard": "^2.0.1",
+    "eslint-plugin-standard": "^3.1.0",
     "wepy-compiler-babel": "^1.5.1",
     "wepy-compiler-less": "^1.3.10",
     "wepy-compiler-stylus": "^1.3.12",
     "wepy-compiler-typescript": "^1.5.9",
-    "wepy-eslint": "^1.5.3",
+    "wepy-eslint": "^1.5.4",
     "weui-wxss": "^1.1.1"
   }
 }
