--- a/package.json
+++ b/package.json
@@ -34,10 +34,10 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "cross-env": "^5.2.0",
-    "eslint": "^3.19.0",
+    "eslint": "^4.19.1",
     "eslint-config-standard": "^10.2.1",
-    "eslint-friendly-formatter": "^2.0.7",
-    "eslint-plugin-html": "^3.2.2",
+    "eslint-friendly-formatter": "^3.0.0",
+    "eslint-plugin-html": "^4.0.5",
     "eslint-plugin-import": "^2.13.0",
     "eslint-plugin-node": "^6.0.1",
     "eslint-plugin-promise": "^3.5.0",
@@ -47,6 +47,8 @@
     "wepy-compiler-stylus": "^1.3.12",
     "wepy-compiler-typescript": "^1.5.9",
     "wepy-eslint": "^1.5.4",
+    "wepy-plugin-imagemin": "^1.5.3",
+    "wepy-plugin-uglifyjs": "^1.3.7",
     "weui-wxss": "^1.1.1"
   }
 }
