--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "wepy-compiler-stylus": "^1.3.12",
     "wepy-compiler-typescript": "^1.5.9",
     "wepy-eslint": "^1.5.4",
+    "wepy-plugin-autoprefixer": "^1.5.10",
     "wepy-plugin-imagemin": "^1.5.3",
     "wepy-plugin-uglifyjs": "^1.3.7",
     "weui-wxss": "^1.1.1"
