修改项目名称

--- a/project.config.json
+++ b/project.config.json
@@ -9,7 +9,7 @@
 	},
 	"compileType": "miniprogram",
 	"appid": "wxe10452b858d098fe",
-	"projectname": "weapp_demo",
+	"projectname": "%E6%B5%8B%E8%AF%95%E6%80%A7%E5%B0%8F%E7%A8%8B%E5%BA%8F%EF%BC%88%E7%BB%84%E4%BB%B6%E9%A1%B5%E9%9D%A2%EF%BC%89",
 	"miniprogramRoot": "./dist",
 	"condition": {}
 }
